update openAPI + add missing backslashes to urls
